@@ -11,6 +11,7 @@
   - fix bug that disabled the name entry when opening the configuration dialog
     if the "use in tooltip" option was not selected.
   - fix wrong error handling when drive detection fails (bug #3354).
+  - fix audio cd infos reading when thread support is disabled.
 	
 
 2007-04-20	Sylvain Reynal <sreynal@nerim.net>
